// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replace the content between the ALL-CONTRIBUTORS-LIST tags by a custom wrapper around the list of contributors contained in the "bodyContent" tag 1`] = `
# project

Description

## Contributors
These people contributed to the project:
<!-- ALL-CONTRIBUTORS-LIST:START -->
<!-- prettier-ignore-start -->
<!-- markdownlint-disable -->
<p>
    <tr>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Divjot Singh is awesome!</td>
      <td align="center" valign="top" width="20%">Jeroen Engels is awesome!</td>
    </tr>
</p>

<!-- markdownlint-restore -->
<!-- prettier-ignore-end -->

<!-- ALL-CONTRIBUTORS-LIST:END -->

Thanks a lot everyone!
`;

exports[`replace the content between the ALL-CONTRIBUTORS-LIST tags by a table of contributors 1`] = `
# project

Description

## Contributors
These people contributed to the project:
<!-- ALL-CONTRIBUTORS-LIST:START -->
<!-- prettier-ignore-start -->
<!-- markdownlint-disable -->
<table>
  <tbody>
    <tr>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Divjot Singh is awesome!</td>
      <td align="center" valign="top" width="20%">Jeroen Engels is awesome!</td>
    </tr>
  </tbody>
</table>

<!-- markdownlint-restore -->
<!-- prettier-ignore-end -->

<!-- ALL-CONTRIBUTORS-LIST:END -->

Thanks a lot everyone!
`;

exports[`replace the content between the ALL-CONTRIBUTORS-LIST tags by a table of contributors with linkToUsage 1`] = `
# project

Description

## Contributors
These people contributed to the project:
<!-- ALL-CONTRIBUTORS-LIST:START -->
<!-- prettier-ignore-start -->
<!-- markdownlint-disable -->
<table>
  <tbody>
    <tr>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Divjot Singh is awesome!</td>
      <td align="center" valign="top" width="20%">Jeroen Engels is awesome!</td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td align="center" size="13px" colspan="5">
        <img src="https://raw.githubusercontent.com/all-contributors/all-contributors-cli/1b8533af435da9854653492b1327a23a4dbd0a10/assets/logo-small.svg">
          <a href="https://all-contributors.js.org/docs/en/bot/usage">Add your contributions</a>
        </img>
      </td>
    </tr>
  </tfoot>
</table>

<!-- markdownlint-restore -->
<!-- prettier-ignore-end -->

<!-- ALL-CONTRIBUTORS-LIST:END -->

Thanks a lot everyone!
`;

exports[`replace the content between the ALL-CONTRIBUTORS-LIST tags by a table of contributors without linkToUsage 1`] = `
# project

Description

## Contributors
These people contributed to the project:
<!-- ALL-CONTRIBUTORS-LIST:START -->
<!-- prettier-ignore-start -->
<!-- markdownlint-disable -->
<table>
  <tbody>
    <tr>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Divjot Singh is awesome!</td>
      <td align="center" valign="top" width="20%">Jeroen Engels is awesome!</td>
    </tr>
  </tbody>
</table>

<!-- markdownlint-restore -->
<!-- prettier-ignore-end -->

<!-- ALL-CONTRIBUTORS-LIST:END -->

Thanks a lot everyone!
`;

exports[`split contributors into multiples lines when there are too many 1`] = `
# project

Description

## Contributors
These people contributed to the project:
<!-- ALL-CONTRIBUTORS-LIST:START -->
<!-- prettier-ignore-start -->
<!-- markdownlint-disable -->
<table>
  <tbody>
    <tr>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
    </tr>
    <tr>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
    </tr>
  </tbody>
</table>

<!-- markdownlint-restore -->
<!-- prettier-ignore-end -->

<!-- ALL-CONTRIBUTORS-LIST:END -->

Thanks a lot everyone!
`;

exports[`split contributors into multiples lines when there are too many with linkToUsage 1`] = `
# project

Description

## Contributors
These people contributed to the project:
<!-- ALL-CONTRIBUTORS-LIST:START -->
<!-- prettier-ignore-start -->
<!-- markdownlint-disable -->
<table>
  <tbody>
    <tr>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
    </tr>
    <tr>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="20%">Kent C. Dodds is awesome!</td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td align="center" size="13px" colspan="5">
        <img src="https://raw.githubusercontent.com/all-contributors/all-contributors-cli/1b8533af435da9854653492b1327a23a4dbd0a10/assets/logo-small.svg">
          <a href="https://all-contributors.js.org/docs/en/bot/usage">Add your contributions</a>
        </img>
      </td>
    </tr>
  </tfoot>
</table>

<!-- markdownlint-restore -->
<!-- prettier-ignore-end -->

<!-- ALL-CONTRIBUTORS-LIST:END -->

Thanks a lot everyone!
`;

exports[`validate if cell width attribute is floored correctly 1`] = `
# project

Description

## Contributors
These people contributed to the project:
<!-- ALL-CONTRIBUTORS-LIST:START -->
<!-- prettier-ignore-start -->
<!-- markdownlint-disable -->
<table>
  <tbody>
    <tr>
      <td align="center" valign="top" width="14.28%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="14.28%">Kent C. Dodds is awesome!</td>
      <td align="center" valign="top" width="14.28%">Kent C. Dodds is awesome!</td>
    </tr>
  </tbody>
</table>

<!-- markdownlint-restore -->
<!-- prettier-ignore-end -->

<!-- ALL-CONTRIBUTORS-LIST:END -->

Thanks a lot everyone!
`;
